--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -9,7 +9,8 @@
         margin: 0 auto;
 
         .logo {
-            width: 13.0rem;
+            width: 12.0rem;
+
             position: absolute;
             top: 50%;
             left: 10px;
@@ -17,11 +18,11 @@
             -moz-transform: translateY(-50%);
             transform: translateY(-50%);
 
-            img {
-                display: block;
-                width: 100%;
-                margin: 0;
-            }
+            // img {
+            //     display: block;
+            //     width: 100%;
+            //     margin: 0;
+            // }
         }
 
         nav {
