--- a/src/components/Directory/styles.scss
+++ b/src/components/Directory/styles.scss
@@ -35,7 +35,7 @@
         font-size: 2rem;
         line-height: 1;
         font-weight: 400;
-        text-transform: uppercase;
+
         background: rgba(255,255,255,.9);
         padding: 10px 15px;
         border: 1px solid black;
@@ -46,6 +46,19 @@
 
       }
 
+    }
+  }
+
+}
+
+@media only screen and (max-width: 980px) {
+
+  .directory .wrap .item {
+    width: 100%;
+    height: 50%;
+
+    a {
+      font-size: 1.5rem;
     }
   }
 
